Movie service added